- Invalid utf8 when creating short usernames in the calendar

20-05-2015 6.1.34
- Updated VObject lib to 3.4.3
- Fixed DTSTART value in VTIMEZONE object when exporting to ICS
- IMAP communication bug with empty body
- Fixed display of status Open in ticket never close status settings
- Display html and text attachments in view

13-05-2015 6.1.33
- Added config option for max thumbnail-able image file size (set default to 10MB)
- Calendar: Fixed display of tasks without start_date in the calendar
- Email em_labels table engine was changed to InnoDB
- Projects2 Expense budget has more field and dialog is updated
- Projects2: unset invoice_number when contract is duplicated
- Process SMIME handlers on reply too but hide encrypted body.
- Updated German translation
- Set language and timezone when user logs in with dav
- Various caldav related fixes
- Billing: Fixed problem with "Enter" in the billing items description field to start a new line.
- Added "Download selected" option in the context menu of the file manager. (Creates a zip of the selected files and presents the download dialog.)
- Added a "Limit"(Maximum size) option for the zipped files file size. ($config['zip_max_file_size']  = 256000000;)

07-05-2015 6.1.32
- Drag and drop projects from grid to tree
- Added custom fields to projects portlet on start page
- Added export of subprojects
- Fixed short array syntax problem.

07-05-2015 6.1.31
- Added z-push config constant for modules/z-push/config.php define("BACKEND_GO_DEFAULT_BODY_PREFENCE", SYNC_BODYPREFERENCE_PLAIN); to solve blackbertt password problem:
	https://forums.zarafa.com/showthread.php?10884-BlackBerry-Passport-does-not-get-HTML-email
- Check available storage client side in files upload dialog
- Files tree will expend when a favorite folder item is selected to enersable Up button
- Updated Czech and German translations
- Use putenv to fix charset issues in documents module