@@ -1,3 +1,4 @@
+- Files: Fixed copy and paste functionality over different file browser dialogs/windows
 - Invalid utf8 when creating short usernames in the calendar
 
 20-05-2015 6.1.34
